# guidance-for-custom-game-backend-hosting-on-aws

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
BackendComponentSamples/: README.md  cdk.json  package-lock.json  package.json
BackendComponentSamples/NodeJsFargateApi/: Dockerfile  package-lock.json  package.json  server.js
BackendComponentSamples/PythonServerlessHttpApiLambda/: get_player_data.py  set_player_data.py
BackendComponentSamples/lib/: NodeJsFargateApiStack.ts  PythonServerlessHttpApiStack.ts
BackendFeatures/AmazonGameLiftIntegration/: .gitignore  README.md  cdk.json  package-lock.json  package.json  setup_fleet_scaling.sh
BackendFeatures/DeltaLakeIntegration/: .gitignore  README.md  app.py  cdk.json  package-lock.json  package.json  requirements.txt
BackendFeatures/DeltaLakeIntegration.PYTHON/: app.py
BackendFeatures/FriendsGraphIntegration/: README.md  cdk.json  package-lock.json  package.json
BackendFeatures/GameAnalyticsIntegration/: .gitignore  README.md  cdk.json  package-lock.json  package.json
BackendFeatures/SimpleWebsocketChat/: Readme.md  cdk.json  package-lock.json  package.json
CustomIdentityComponent/: README.md  cdk.json  package-lock.json  package.json
CustomIdentityComponent/lambda_rust/: Cargo.toml
CustomIdentityComponent/lambda_rust/src/: main.rs
DeploymentPipeline/: README.md  cdk.json  package-lock.json  package.json
GodotSample/: README.md  icon.svg.import  project.godot
UnitySample/: README.md
UnrealSample/: README.md  UnrealSample.uproject
(+331 files in other folders)
