[package]
name = "lambda-http-test"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0"
aws-sdk-secretsmanager = "0"
cached = { version ="0", features = ["async"] }
http = "0.2"
jsonwebkey = { version ="0.3", features = ["jwt-convert"] }
jsonwebtoken = "8"
lambda_http = { version = "0.8", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8"
metrics = "0.21.1"
metrics_cloudwatch_embedded = { version = "0.4.1", features = ["lambda"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"